--- a/shop/templates/shop/cart.html
+++ b/shop/templates/shop/cart.html
@@ -30,11 +30,12 @@
                                 </td>
                                 <td>$ {{ item.price }}</td>
                                 <td>$ {{ item.total_price }}</td>
-                               <td><form action="{% url 'cart:cart_remove' cake.id %}" method="post">
+                               <td>
+                               <form action="{% url 'cart:cart_remove' cake.id %}" method="post">
                                 {% csrf_token %}
 
-                                <button type="submit" class="btn btn-sm btn-danger">Remove</button>
-                                </form>
+        <button type="submit" class="btn btn-sm btn-danger">Remove</button>
+        </form>
                                 </td>
                             </tr>
                         {% endwith %}
@@ -48,6 +49,33 @@
                 <a href="{% url 'shop:index' %}" class="btn btn-secondary">Continue Shopping</a>
                 <a href="{% url 'shop:checkout' %}" class="btn btn-success">Checkout</a>
                 </div>
+        <button id="checkout-button" class="btn btn-success">Checkout</button>
+        <script src="https://js.stripe.com/v3/"></script>
+        <script>
+            var stripe = Stripe('{{ STRIPE_PUBLIC_KEY }}');
+                var checkoutButton = document.getElementById('checkout-button');
+        checkoutButton.addEventListener('click', function() {
+                fetch('shop/create-checkout-session/', {
+                    methd: 'POST',
+                })
+                .then(function(response) {
+                        return response.Json();
+                })
+                .then(function(session) {
+                        return
+        stripe.redirectToCheckout({ sessionId:session.id });
+                })
+                .then(function(result) {
+                    if (result.error) {
+
+        alert(result.error.message);
+                    }
+                })
+                .catch(function(error) {
+                    console.error('Error:', error);
+                        });
+                    });
+        </script>
                 {% else %}
                 <p>Your cart is empty.</p>
                 <a href="{% url 'shop:index' %}" class="btn btn-primary">Continue Shopping</a>
