--- a/shop/templates/shop/index.html
+++ b/shop/templates/shop/index.html
@@ -2,20 +2,19 @@
 <ul>
     {% for category in categories %}
         <li><a href="{% url 'category_detail' category.id %}">{{ category.name }}</a></li>
-        {% endfor %}
+    {% endfor %}
 </ul>
 <h2>All Cakes</h2>
 <ul>
     {% for cake in cakes %}
-        <li><a href="{% url 'cake_detail' cake.id %}">{{ cake.name }}</a> - $
-        {{ cake.price }}</li>
-        {% endfor %}
+        <li><a href="{% url 'cake_detail' cake.id %}">{{ cake.name }}</a> - ${{ cake.price }}</li>
+    {% endfor %}
 </ul>
 <div class="text-end">
     {% if user.is_authenticated %}
         <a href="{% url 'account_logout' %}" class="btn btn-outline-danger">Logout</a>
-            {% else %}
+    {% else %}
         <a href="{% url 'account_login' %}" class="btn btn-outline-primary">Login</a>
         <a href="{% url 'account_signup' %}" class="btn btn-outline-success">Sign Up</a>
-            {% endif %}
+    {% endif %}
 </div>
