modified:   .hintrc        modified:   cakeshop/__pycache__/settings.cpython-312.pyc        modified:   cakeshop/settings.py        modified:   cakeshop/urls.py        modified:   shop/templates/shop/footer.html        modified:   shop/templates/shop/navbar.html        modified:   templates/base.html

--- a/shop/templates/shop/footer.html
+++ b/shop/templates/shop/footer.html
@@ -7,9 +7,9 @@
     </div>
     <div class="col-lg-6 col-md-12 mb-4 mb-md-0">
     <h5 class="text-uppercase">Follow Us</h5>
-        <a hrtef="https://facebook.com" class="me-4 text-reset"><i class="fab fa-facebook-f"></i></a>
-        <a hrtef="https://twitter.com" class="me-4 text-reset"><i class="fab fa-twitter"></i></a>
-        <a hrtef="https://instagram.com" class="me-4 text-reset"><i class="fab fa-instagram"></i></a>
+        <a href="https://facebook.com" class="me-4 text-reset"><i class="fab fa-facebook-f"></i></a>
+        <a href="https://twitter.com" class="me-4 text-reset"><i class="fab fa-twitter"></i></a>
+        <a href="https://instagram.com" class="me-4 text-reset"><i class="fab fa-instagram"></i></a>
             </div>
         </div>
     </div>
