--- a/shop/templates/shop/navbar.html
+++ b/shop/templates/shop/navbar.html
@@ -1,21 +1,24 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid">
-        <a class="navbar-brand" href="{% url 'index' %}">Cake shop</a>
-    <div class="collapse navbar-collapse">
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-        <li class="nav-item">
-        <a class="nav-link" href="{% url 'index' %}">Home</a>
-        </li>
-        <li class="nav-item">
-        <a class="nav-link" href="{% url 'cart:cart_detail' %}">Cart</a>
-        </li>
-    </ul>
-    <div class="d-flex">
-        {% if user.is_authenticated %}
-        <a href="{% url 'account_logout' %}" class="btn btn-outline-danger">Logout</a>
-        {% else %}
-        <a href="{% url 'account_login' %}" class="btn btn-outline-primary">Login</a>
-        <a href="{% url 'account_signup' %}" class="btn btn-outline-success">Sign Up</a>
+        <a class="navbar-brand" href="{% url 'index' %}">Cake Shop</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'index' %}">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'cart_detail' %}">Cart</a>
+                </li>
+            </ul>
+            <div class="d-flex">
+                {% if user.is_authenticated %}
+                    <a href="{% url 'account_logout' %}" class="btn btn-outline-danger">Logout</a>
+                {% else %}
+                    <a href="{% url 'account_login' %}" class="btn btn-outline-primary">Login</a>
+                    <a href="{% url 'account_signup' %}" class="btn btn-outline-success">Sign Up</a>
                 {% endif %}
             </div>
         </div>
