--- a/templates/base.html
+++ b/templates/base.html
@@ -8,13 +8,21 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
 </head>
 <body>
-    {% include 'shop/navbar.html' %}
-    <div class="container mt-4">
-        {% block content %}
-        {% endblock %}
-    </div>
-    {% include 'shop/footer.html' %}
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js">
-</script>
+    <header>
+        {% include 'shop/navbar.html' %}
+    </header>
+
+    <main>
+        <div class="container mt-4">
+            {% block content %}
+            {% endblock %}
+        </div>
+    </main>
+
+    <footer>
+        {% include 'shop/footer.html' %}
+    </footer>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
