modified:   cakeshop/settings.py        modified:   shop/templates/shop/about.html        modified:   shop/templates/shop/cake_detail.html        modified:   shop/templates/shop/cancel.html        modified:   shop/templates/shop/category_detail.html        modified:   shop/templates/shop/footer.html        modified:   shop/templates/shop/index.html        modified:   shop/templates/shop/success.html        modified:   templates/base.html, and added media/, static/

--- a/shop/templates/shop/category_detail.html
+++ b/shop/templates/shop/category_detail.html
@@ -1,3 +1,6 @@
+{% extends 'base.html' %}
+
+{% block content %}
 <h1>{{ category.name }}</h1>
 <p>{{ category.description }}</p>
 <ul>
@@ -6,3 +9,4 @@
         {{ cake.price }}</li>
         {% endfor %}
 </ul>
+{% endblock %}
