--- a/shop/templates/shop/about.html
+++ b/shop/templates/shop/about.html
@@ -1,4 +1,8 @@
+{% extends 'base.html' %}
+
+{% block content %}
 <h1>About Us</h1>
 <p>We are located in Manchester, UK.
 Visit us or order online!
 </p>
+{% endblock %}
