--- a/shop/templates/shop/cake_detail.html
+++ b/shop/templates/shop/cake_detail.html
@@ -1,8 +1,45 @@
-<h1>{{ cake.name }}</h1>
-<img src="{{ cake.image.url }}" alt="{{ cake.name }}">
-<p>{{ cake.description }}</p>
-<p>Price: ${{ cake.price }}</p>
-<form action="{% url 'cart:add' cake.id %}" method="post">
-    {% csrf_token %}
-    <button type="submit" class="btn btn-primary">Add to Cart</button>
-</form>
+{% extends 'base.html' %}
+
+{% block content %}
+<div class="container mt-4">
+    <div class="row">
+        <!-- Cake Image -->
+        <div class="col-md-6">
+            <img src="{{ cake.image.url }}" alt="{{ cake.name }}" class="img-fluid rounded">
+        </div>
+
+        <!-- Cake Details -->
+        <div class="col-md-6">
+            <h1>{{ cake.name }}</h1>
+            <p class="lead">{{ cake.description }}</p>
+            <p class="h4">Price: ${{ cake.price }}</p>
+
+            <!-- Add to Cart Form -->
+            <form action="{% url 'cart:add' cake.id %}" method="post" class="mt-4">
+                {% csrf_token %}
+                <button type="submit" class="btn btn-primary btn-lg">
+                    <i class="fas fa-cart-plus"></i> Add to Cart
+                </button>
+            </form>
+        </div>
+    </div>
+
+    <!-- Related Cakes (Optional) -->
+    <div class="row mt-5">
+        <h2>You Might Also Like</h2>
+        {% for related_cake in related_cakes %}
+        <div class="col-md-4 mb-4">
+            <div class="cake-card">
+                <img src="{{ related_cake.image.url }}" alt="{{ related_cake.name }}" class="card-img-top">
+                <div class="card-body">
+                    <h5 class="card-title">{{ related_cake.name }}</h5>
+                    <p class="card-text">{{ related_cake.description }}</p>
+                    <p class="card-text">${{ related_cake.price }}</p>
+                    <a href="{% url 'cake_detail' related_cake.id %}" class="btn btn-custom">View Details</a>
+                </div>
+            </div>
+        </div>
+        {% endfor %}
+    </div>
+</div>
+{% endblock %}
