--- a/shop/templates/shop/cancel.html
+++ b/shop/templates/shop/cancel.html
@@ -1,4 +1,8 @@
 <!-- shop/templates/shop/cancel.html -->
+{% extends 'base.html' %}
+
+{% block content %}
 <h1>Payment Canceled</h1>
 <p>Your payment was canceled. You can try again.</p>
 <a href="/">Return to Home</a>
+{% endblock %}
