--- a/shop/templates/shop/footer.html
+++ b/shop/templates/shop/footer.html
@@ -1,3 +1,6 @@
+{% extends 'base.html' %}
+
+{% block content %}
 <footer class="bg-light text-center text-lg-start mt-4">
     <div class="container p-4">
     <div class="row">
@@ -14,3 +17,4 @@
         </div>
     </div>
 </footer>
+{% endblock %}
