--- a/shop/templates/shop/index.html
+++ b/shop/templates/shop/index.html
@@ -1,3 +1,6 @@
+{% extends 'base.html' %}
+
+{% block content %}
 <h1>Welcome to Our Cake Shop</h1>
 <ul>
     {% for category in categories %}
@@ -18,3 +21,4 @@
         <a href="{% url 'account_signup' %}" class="btn btn-outline-success">Sign Up</a>
     {% endif %}
 </div>
+{% endblock %}
