--- a/shop/templates/shop/success.html
+++ b/shop/templates/shop/success.html
@@ -1,4 +1,8 @@
 <!-- shop/templates/shop/success.html -->
+{% extends 'base.html' %}
+
+{% block content %}
 <h1>Payment Successful</h1>
 <p>Thank you for your purchase!</p>
 <a href="/">Return to Home</a>
+{% endblock %}
