--- a/shop/templates/shop/index.html
+++ b/shop/templates/shop/index.html
@@ -1,24 +1,22 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<h1>Welcome to Our Cake Shop</h1>
-<ul>
-    {% for category in categories %}
-        <li><a href="{% url 'category_detail' category.id %}">{{ category.name }}</a></li>
-    {% endfor %}
-</ul>
-<h2>All Cakes</h2>
-<ul>
-    {% for cake in cakes %}
-        <li><a href="{% url 'cake_detail' cake.id %}">{{ cake.name }}</a> - ${{ cake.price }}</li>
-    {% endfor %}
-</ul>
-<div class="text-end">
-    {% if user.is_authenticated %}
-        <a href="{% url 'account_logout' %}" class="btn btn-outline-danger">Logout</a>
-    {% else %}
-        <a href="{% url 'account_login' %}" class="btn btn-outline-primary">Login</a>
-        <a href="{% url 'account_signup' %}" class="btn btn-outline-success">Sign Up</a>
-    {% endif %}
+<div class="container mt-4">
+    <h1 class="text-center">Welcome to the Cake Shop</h1>
+    <div class="row">
+        {% for cake in cakes %}
+        <div class="col-md-4 mb-4">
+            <div class="cake-card">
+                <img src="{{ cake.image.url }}" alt="{{ cake.name }}">
+                <div class="card-body">
+                    <h5 class="card-title">{{ cake.name }}</h5>
+                    <p class="card-text">{{ cake.description }}</p>
+                    <p class="card-text">${{ cake.price }}</p>
+                    <a href="{% url 'shop:cake_detail' cake.id %}" class="btn btn-custom">View Details</a>
+                </div>
+            </div>
+        </div>
+        {% endfor %}
+    </div>
 </div>
 {% endblock %}
