--- a/shop/templates/shop/navbar.html
+++ b/shop/templates/shop/navbar.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid">
         <!-- Brand/Logo -->
-        <a class="navbar-brand" href="{% url 'index' %}">Cake Shop</a>
+        <a class="navbar-brand" href="{% url 'shop:index' %}">Cake Shop</a>
 
         <!-- Toggle Button for Mobile -->
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -13,12 +13,12 @@
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <!-- Home Link -->
                 <li class="nav-item">
-                    <a class="nav-link" href="{% url 'index' %}">Home</a>
+                    <a class="nav-link" href="{% url 'shop:index' %}">Home</a>
                 </li>
 
                 <!-- Cart Link -->
                 <li class="nav-item">
-                    <a class="nav-link" href="{% url 'cart_detail' %}">
+                    <a class="nav-link" href="{% url 'cart:cart_detail' %}">
                         <i class="fas fa-shopping-cart"></i> Cart
                     </a>
                 </li>
