--- a/shop/templates/shop/navbar.html
+++ b/shop/templates/shop/navbar.html
@@ -16,6 +16,11 @@
                     <a class="nav-link" href="{% url 'shop:index' %}">Home</a>
                 </li>
 
+                <!-- About Link -->
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'shop:about' %}">
+                </li>
+
                 <!-- Cart Link -->
                 <li class="nav-item">
                     <a class="nav-link" href="{% url 'cart:cart_detail' %}">
