--- a/shop/templates/shop/navbar.html
+++ b/shop/templates/shop/navbar.html
@@ -8,26 +8,27 @@
             <span class="navbar-toggler-icon"></span>
         </button>
 
-        <!-- Navbar Links -->
-        <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                <!-- Home Link -->
-                <li class="nav-item">
-                    <a class="nav-link" href="{% url 'shop:index' %}">Home</a>
-                </li>
+       <!-- Navbar Links -->
+<div class="collapse navbar-collapse" id="navbarNav">
+    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <!-- Home Link -->
+        <li class="nav-item">
+            <a class="nav-link" href="{% url 'shop:index' %}">Home</a>
+        </li>
 
-                <!-- About Link -->
-                <li class="nav-item">
-                    <a class="nav-link" href="{% url 'shop:about' %}">
-                </li>
+        <!-- About Link -->
+        <li class="nav-item">
+            <a class="nav-link" href="{% url 'shop:about' %}">About</a>
+        </li>
 
-                <!-- Cart Link -->
-                <li class="nav-item">
-                    <a class="nav-link" href="{% url 'cart:cart_detail' %}">
-                        <i class="fas fa-shopping-cart"></i> Cart
-                    </a>
-                </li>
-            </ul>
+        <!-- Cart Link -->
+        <li class="nav-item">
+            <a class="nav-link" href="{% url 'cart:cart_detail' %}">
+                <i class="fas fa-shopping-cart"></i> Cart
+            </a>
+        </li>
+    </ul>
+</div>
 
             <!-- Authentication Links -->
             <div class="d-flex">
