--- a/shop/templates/shop/category_detail.html
+++ b/shop/templates/shop/category_detail.html
@@ -1,6 +1,7 @@
 {% extends 'base.html' %}
 
 {% block content %}
+<div class="container mt-4">
 <h1>{{ category.name }}</h1>
 <p>{{ category.description }}</p>
 <ul>
