--- a/shop/templates/shop/navbar.html
+++ b/shop/templates/shop/navbar.html
@@ -27,6 +27,11 @@
                 <i class="fas fa-shopping-cart"></i> Cart
             </a>
         </li>
+        <!-- Navbar Search Form -->
+        <form class="d-flex" action="{% url 'shop:search' %}" method="GET">
+            <input class="form-control me-2" type="search" name="q" placeholder="Search cakes..." aria-label="Search">
+        <button class="btn btn-outline-success" type="submit">Search</button>
+        </form>
     </ul>
 </div>
 
