--- a/shop/templates/shop/success.html
+++ b/shop/templates/shop/success.html
@@ -2,6 +2,7 @@
 {% extends 'base.html' %}
 
 {% block content %}
+<div class="container mt-4">
 <h1>Payment Successful</h1>
 <p>Thank you for your purchase!</p>
 <a href="/">Return to Home</a>
