--- a/shop/templates/shop/cake_detail.html
+++ b/shop/templates/shop/cake_detail.html
@@ -15,7 +15,7 @@
             <p class="h4">Price: ${{ cake.price }}</p>
 
             <!-- Add to Cart Form -->
-            <form action="{% url 'cart:add' cake.id %}" method="post" class="mt-4">
+            <form action="{% url 'cart:add_to_cart' cake.id %}" method="post" class="mt-4">
                 {% csrf_token %}
                 <button type="submit" class="btn btn-primary btn-lg">
                     <i class="fas fa-cart-plus"></i> Add to Cart
