--- a/shop/templates/shop/home.html
+++ b/shop/templates/shop/home.html
@@ -8,16 +8,19 @@
         {% for cake in cakes %}
         <div class="col-md-4 mb-4">
             <div class="card">
-                <img src="{{ cake.image.url }}" alt="{{ cake.name }}" class="card-img-top">
+                {% if cake.image %}
+                    <img src="{{ cake.image.url }}" alt="{{ cake.name }}" class="card-img-top">
+                {% else %}
+                    <img src="/static/images/default_cake.jpg" alt="{{ cake.name }}" class="card-img-top">
+                {% endif %}
                 <div class="card-body">
                     <h5 class="card-title">{{ cake.name }}</h5>
                     <p class="card-text">{{ cake.description }}</p>
                     <p class="card-text">${{ cake.price }}</p>
-                    <a href="{% url 'add_to_cart' cake.id %}" class="btn btn-primary">Add to Cart</a>
+                    <a href="{% url 'cart:cart_add' cake.id %}" class="btn btn-primary">Add to Cart</a>
                 </div>
             </div>
         </div>
         {% endfor %}
     </div>
 </div>
-{% endblock %}
