modified:   cakeshop/__pycache__/settings.cpython-312.pyc        modified:   cakeshop/settings.py        modified:   shop/templates/shop/home.html

--- a/shop/templates/shop/home.html
+++ b/shop/templates/shop/home.html
@@ -1,4 +1,4 @@
-<!-- templates/home.html -->
+<!-- templates/shop/home.html -->
 {% extends 'base.html' %}
 
 {% block content %}
@@ -24,3 +24,4 @@
         {% endfor %}
     </div>
 </div>
+{% endblock %}
