modified:   cakeshop/__pycache__/urls.cpython-312.pyc        modified:   cakeshop/urls.py        modified:   cart/__pycache__/forms.cpython-312.pyc        modified:   cart/__pycache__/urls.cpython-312.pyc        modified:   cart/__pycache__/views.cpython-312.pyc        modified:   cart/urls.py        modified:   cart/views.py        modified:   db.sqlite3        modified:   shop/__pycache__/views.cpython-312.pyc        modified:   shop/templates/shop/cake_detail.html        modified:   shop/urls.py        modified:   shop/views.py and added shop/__pycache__/forms.cpython-312.pyc        shop/forms.py

--- a/shop/templates/shop/cake_detail.html
+++ b/shop/templates/shop/cake_detail.html
@@ -57,7 +57,7 @@
                     <h5 class="card-title">{{ related_cake.name }}</h5>
                     <p class="card-text">{{ related_cake.description }}</p>
                     <p class="card-text">${{ related_cake.price }}</p>
-                    <a href="{% url 'cake_detail' related_cake.id %}" class="btn btn-custom">View Details</a>
+                    <a href="{% url 'shop:cake_detail' related_cake.id %}" class="btn btn-custom">View Details</a>
                 </div>
             </div>
         </div>
